# crud-basico

./: .env  Cargo.toml
src/: main.rs
src/database/postgres_connection/: mod.rs
src/database/postgres_connection/migration/: 0001_usertable.sql
src/databases/postgres_connection/: mod.rs
src/databeses/postgres_connection/: mod.rs
src/service/users/: models.rs  service.rs
static/: index.html  script.js  styles.css
