[package]
name = "crudsimples"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-files = "0.6.6"
actix-web = "4.9.0"
bcrypt = "0.15.1"
dotenv = "0.15.0"
serde = { version = "1.0.206", features = ["derive"] }
serde_json = "1.0.122"
sqlx = { version = "0.8.0", features = ["postgres", "runtime-async-std"] }
